--- a/css/estilos.css
+++ b/css/estilos.css
@@ -22,20 +22,24 @@ h2{
     padding-bottom: 10px;
 }
 
+h3{
+    font-size: 18px;
+}
+
+/*********** Index ***********/
 .box{
     padding: 20px;
-    width: 500px;
+    width: 600px;
     border-radius: 10px;
     box-shadow: -1px 8px 15px 0px rgba(0, 0, 0, 0.5);
-    background-color: transparent;
-    
+    background-color: transparent;    
 }
 
 .btn-comenzar{
     min-width: 250px;
     font-size: 25px;
     font-weight: 500;
-    color: #fff;
+    color: white;
     padding: 15px 30px;
     outline: none;
     border: none;
@@ -45,19 +49,23 @@ h2{
     animation: pulse 1.5s infinite;
 }
 
+/*********** Quiz ***********/
+.container{
+    padding-top: 30px;
+}
 
 .qa_box{
-    width: 500px;
+    width: 800px;
     padding: 20px;
     min-height: 100px;
-    background-color:#fff;
+    background-color:white;
     box-shadow: 0 0 5px 3px rgba(0, 0, 0, 0.1);
     border-radius: 15px;
 }
 
 .qa_header{
     background-color: #0b58a7;
-    color: #fff;
+    color: white;
     display: flex;
     justify-content: space-between;
     padding: 15px 20px;
@@ -74,60 +82,43 @@ h2{
     display: block;
 }
 
-.qa_set h4{
-    margin: 0 0 15px;
-    font-size: 20px;
+section{
+    border: 2px solid #064484;
+    border-radius: 8px;
+    padding: 10px;
+    margin: 10px 0;
 }
 
-.qa_ans{
-    position: relative;
-    margin-bottom: 10px;
-}
-
-.qa_ans input{
+section input{
     opacity: 0;
-    position: absolute;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    z-index: 1;
-    cursor: pointer;
-    text-decoration: none;
 }
 
-.qa_ans span{
+label{
     display: block;
-    padding: 8px 15px;
-    background-color: #2e86c18a;
-    border-radius: 15px;
-    transition: all 0.3s ease-out;
+    padding: 8px;
+    border-radius: 8px;
+    cursor: pointer;
+    border: 1px dashed #ccc;
+    margin-bottom: 3px;
+    font-size: 15px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
-.qa_ans:hover span{
-    background-color: #23A6D5;
+label:hover{
+    background:rgba(0, 0, 0, 0.1);
 }
 
-.qa_ans input:checked + span{
-    background-color: #f93c3c;
-    color: #fff;
-}
-
-.qa_ans input[valid]:checked + span{
-    background-color: green;
-    color: #fff;
-}
-
+/*********** Footer ***********/
 .qa_footer{
     padding: 10px 0 0;
     text-align: right;
 }
 
-.btn1, .btn2{
+.btn1{
     display: inline-block;
     padding: 8px 20px;
     background-color: #0b58a7;
-    color: #fff;
+    color: white;
     border-radius: 15px;
     cursor: pointer;
     transition: all 0.3s ease-out;
@@ -136,7 +127,7 @@ h2{
     text-decoration: none;
 }
 
-.btn1:hover, .btn2:hover{
+.btn1:hover{
     background-color: #064484;
 }
 
@@ -144,6 +135,17 @@ h2{
     font-size: 30px;
 }
 
+#btnarriba{
+    position:fixed;
+    bottom: 20px;
+    right: 100px;
+    width: 70px;
+    transition: 1s;
+    animation: pulse 1.5s infinite;
+    border-radius: 50px;
+}
+
+/*********** Animaciones ***********/
 @keyframes change {
     0%{
         background-position: 0 50%;
